fix: add a column gap to the get started section

--- a/css/style.css
+++ b/css/style.css
@@ -1101,6 +1101,7 @@ section.get-started .inner {
   padding: 64px;
   position: relative;
   margin-top: -96px;
+  column-gap: 16px;
 }
 
 .get-started__title {
